--- a/src/tpl/Views/Gallery/Galerie-2022.twig
+++ b/src/tpl/Views/Gallery/Galerie-2022.twig
@@ -160,7 +160,7 @@
 {% block content %}
 
 <main role="main" id="main" class="main">
-    <section class="section section--top">
+    <section class="section">
         <div class="container">
             <a href="/Galerie.html" class="link-back">{% include "@components/core/icon-svg/icon-svg.twig" with {props: { name: "back" }} %} Zpět</a>
         </div>
@@ -168,7 +168,7 @@
     <section class="section section--top section--bottom">
         <div class="container">
             {% include "@components/core/title/title.twig" with { props: {
-                title: "Galerie",
+                title: "Galerie 2022",
                 tag: "h2",
             }} %}
             <div class="grid grid--center">
