--- a/src/css/components/_link-back.scss
+++ b/src/css/components/_link-back.scss
@@ -3,6 +3,7 @@
     align-items: center;
     gap: 12px;
     text-decoration: none;
+    padding-top: 20px;
     & .icon-svg {
         transition: transform $t;
     }
