--- a/src/tpl/layout/layout.twig
+++ b/src/tpl/layout/layout.twig
@@ -88,28 +88,28 @@
 				logo: "Logo-1.png",
 				items: [
 					{
-						title: "Vstupenky",
-						link: "/#tickets"
-					},
-					{
 						title: "Kapely",
 						link: "/kapely.html"
 					},
 					{
-						title: "Galerie",
-						link: "/galerie.html"
+						title: "Vstupenky",
+						link: "/#tickets"
 					},
 					{
 						title: "Novinky",
 						link: "/#news"
 					},
 					{
+						title: "Galerie",
+						link: "/galerie.html"
+					},
+					{
 						title: "Informace",
-						link: "#"
+						link: "#information"
 					},
 					{
 						title: "Kontakty",
-						link: "#"
+						link: "#contact"
 					}
 				]
 			}} %}
