--- a/src/css/base/_typography.scss
+++ b/src/css/base/_typography.scss
@@ -114,10 +114,15 @@ li {
 }
 ul {
 	li {
-		background-image: url($svgBullet);
-		background-position: 5px 0.5em;
-		background-repeat: no-repeat;
-		background-size: 4px 4px;
+		&::before {
+			content: '\2022';
+			display: inline-block;
+			vertical-align: top;
+			width: 6px;
+			margin-right: 7px;
+			color: $colorText;
+			font-family: Arial, Helvetica, sans-serif;
+		}
 	}
 }
 ol {
