--- a/src/css/core/objects/_section.scss
+++ b/src/css/core/objects/_section.scss
@@ -15,7 +15,8 @@
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	background-position: top;
-	margin-top: 120px;
+	//box-shadow: 0px 0px 9px 0px rgba(92,92,92,1);
+	padding-top: 60px;
 	padding-bottom: 60px;
 	z-index: 1;
 	}
@@ -30,7 +31,7 @@
 			margin-bottom: 80px;
 		}
 		&--bg {
-			margin-top: 160px;
+			padding-top: 80px;
 			padding-bottom: 80px;
 		}
 	}
