--- a/src/css/core/objects/buttons/_btn-glitch.scss
+++ b/src/css/core/objects/buttons/_btn-glitch.scss
@@ -7,13 +7,13 @@
     align-items: center;
     padding: 10px 18px 12px;
     border-radius: 2px;
-    font-size: 20px;
+    font-size: 18px;
     background: linear-gradient(45deg, transparent 5%, $colorSecondary 5%);
     border: 0;
     color: #fff;
     letter-spacing: 1px;
     font-weight: bold;
-    text-transform: uppercase;
+    //text-transform: uppercase;
     //box-shadow: 6px 0px 0px #00E6F6;
     outline: transparent;
     position: relative;
@@ -21,6 +21,9 @@
     -webkit-user-select: none;
     touch-action: manipulation;
     cursor: pointer;
+    @media ($mdUp) {
+      font-size: 18px;
+    }
 }
 
 .btn-glitch__text {
