--- a/src/css/core/objects/_animations.scss
+++ b/src/css/core/objects/_animations.scss
@@ -1,4 +1,4 @@
-@keyframes scale {
+@keyframes scaleX {
 	0% {
 		transform: scaleX(0);
 	}
@@ -6,15 +6,23 @@
 		transform: scaleX(1);
 	}
 }
+@keyframes scale {
+	from {
+		transform: scale(1);
+	}
+	to {
+		transform: scale(1.2);
+	}
+}
 @keyframes neon {
 	0% {
 	  filter: drop-shadow(0px 0px 1px #fff) drop-shadow(0px 0px 3px #fff)
-		drop-shadow(0px 0px 10px #6be6aad9) drop-shadow(0px 0px 30px #64c294d9
-		) drop-shadow(0px 0px 50px #00a657d9);
+		drop-shadow(0px 0px 10px #64c294d9) drop-shadow(0px 0px 30px #64c294d9
+		) drop-shadow(0px 0px 30px #00a657d9);
 	}
 	100% {
 	  filter: drop-shadow(0px 0px 1px #fff) drop-shadow(0px 0px 6px #fff)
-		drop-shadow(0px 0px 15px #6be6aad9) drop-shadow(0px 0px 40px #64c294d9)
-		drop-shadow(0px 0px 60px #64c294d9);
+		drop-shadow(0px 0px 15px #64c294d9) drop-shadow(0px 0px 30px #64c294d9)
+		drop-shadow(0px 0px 40px #64c294d9);
 	}
   }
