--- a/src/tpl/layout/layout.twig
+++ b/src/tpl/layout/layout.twig
@@ -16,6 +16,7 @@
 		<meta property="og:image" content="http://www.example.com/image.jpg">
 		<meta property="og:site_name" content="Project">
 		<meta property="og:url" content="http://www.example.com/">
+		<meta http-equiv="refresh" content="time; URL=/" />
 
 		<title>{{ pageTitle }}</title>
 
@@ -93,11 +94,11 @@
 					},
 					{
 						title: "Vstupenky",
-						link: "/#tickets"
+						link: "/#listky"
 					},
 					{
 						title: "Novinky",
-						link: "/#news"
+						link: "/#novinky"
 					},
 					{
 						title: "Galerie",
@@ -105,11 +106,11 @@
 					},
 					{
 						title: "Informace",
-						link: "#information"
+						link: "/#informace"
 					},
 					{
 						title: "Kontakty",
-						link: "#contact"
+						link: "/#kontakty"
 					}
 				]
 			}} %}
