--- a/src/css/components/_information.scss
+++ b/src/css/components/_information.scss
@@ -12,10 +12,17 @@
     }
     &__address {
         & li {
+            @extend %reset-ul-li;
             padding-left: 0;
         }
     }
     @media ($mdUp) {
+        &__location {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            height: 100%;
+        }
         .hoverevents &__map:hover img {
             transform: scale(1.1);
         }
