--- a/src/css/components/_link-back.scss
+++ b/src/css/components/_link-back.scss
@@ -1,13 +1,34 @@
 .link-back {
-    display: inline-flex;
+    display: flex;
     align-items: center;
-    gap: 12px;
-    text-decoration: none;
-    padding-top: 20px;
-    & .icon-svg {
-        transition: transform $t;
+    gap: 40px;
+    &__link {
+
+        display: inline-flex;
+        align-items: center;
+        gap: 12px;
+        text-decoration: none;
+        padding-top: 20px;
+        & .icon-svg {
+            transition: transform $t;
+            &--home {
+                width: 20px;
+            }
+        }
+        &:nth-child(2) {
+            position: relative;
+            &::after {
+                position: absolute;
+                content: "";
+                left: -21px;
+                bottom: 0;
+                width: 2px;
+                height: 70%;
+                background-color: $colorWhite;
+            }
+        }
     }
-    .hoverevents &:hover .icon-svg {
+    .hoverevents &__link:hover .icon-svg--back {
         transform: translateX(-10px);
     }
 }
