--- a/src/css/components/_scroll-top.scss
+++ b/src/css/components/_scroll-top.scss
@@ -13,7 +13,7 @@
     z-index: 10;
     transform: translateY(100px);
     opacity: 0;
-    transition: $t;
+    transition: opacity $t;
     cursor: pointer;
     & .icon-svg {
         color: $colorWhite;
@@ -24,6 +24,8 @@
     &.is-active {
         display: flex;
         opacity: 1;
+        animation: scaleX;
+        animation-duration: .5s;
         transform: translateY(0);
     }
     @media ($mdUp) {
