--- a/src/css/components/_tickets.scss
+++ b/src/css/components/_tickets.scss
@@ -6,6 +6,9 @@
 
     &__steps {
         text-align: center;
+        padding: 30px;
+        background-color: #3333;
+        border-radius: 8px;
     }
     &__step-title {
         display: flex;
@@ -16,7 +19,7 @@
 
     @media ($mdUp) {
         &__button {
-            margin: 20px 0 60px 0;
+            margin: 40px 0 80px 0;
         }
     }
 }
