--- a/src/css/layout/_header.scss
+++ b/src/css/layout/_header.scss
@@ -26,6 +26,9 @@
             transform: translateX(0);
         }
     }
+    &__list-wrap {
+        position: relative;
+    }
     &__wrap {
         padding: 15px;
         display: flex;
@@ -36,6 +39,11 @@
         background-attachment: fixed;
         backdrop-filter: blur(10px);
         -webkit-backdrop-filter: blur(10px);
+    }
+    &__home {
+        position: absolute;
+        left: 30px;
+        top: 20px;
     }
     &__logo {
         & img {
@@ -114,6 +122,9 @@
             font-size: 18px;
         }
         &__toggle {
+            display: none;
+        }
+        &__home {
             display: none;
         }
     }
