--- a/src/tpl/Galerie.twig
+++ b/src/tpl/Galerie.twig
@@ -20,6 +20,13 @@
 {% block content %}
 
 <main role="main" id="main" class="main">
+    <section class="section">
+        <div class="container">
+            <div class="link-back">
+                <a href="/" class="link-back__link">{% include "@components/core/icon-svg/icon-svg.twig" with {props: { name: "back" }} %} Zpět</a>
+            </div>
+        </div>
+    </section>
     <section class="section section--top-lg section--bottom">
         <div class="container">
             {% include "@components/core/title/title.twig" with { props: {
