--- a/src/tpl/Views/Novinky/zahajeni.twig
+++ b/src/tpl/Views/Novinky/zahajeni.twig
@@ -7,22 +7,24 @@
 <main role="main" id="main" class="main">
     <section class="section">
         <div class="container">
-            <a href="/Kapely.html" class="link-back">{% include "@components/core/icon-svg/icon-svg.twig" with {props: { name: "back" }} %} Zpět</a>
+            <div class="link-back">
+                <a href="/" class="link-back__link">{% include "@components/core/icon-svg/icon-svg.twig" with {props: { name: "back" }} %} Zpět</a>
+            </div>
         </div>
     </section>
     <section class="section section--top">
         <div class="container">
             {% include "@components/box/main-image/main-image.twig" with { props: {
-                img: "main-image/galerie2.webp",
-                alt: "kapela 375 m.n.m",
-                title: "375 m.n.m",
+                img: "news/zahajeni.webp",
+                alt: "Fotografie podia při západu slunce.",
+                title: "Zahájení festivalu",
             }} %}
         </div>
     </section>
     <section class="section section--top">
         <div class="container">
             {% include "@components/core/title/title.twig" with { props: {
-                title: "Česko třebovská kapela 375 m.n.m",
+                title: "Krátký článek k zahájení festivalu.",
                 tag: "h2",
             }} %}
         </div>
@@ -31,31 +33,14 @@
         <div class="container">
             <div class="blog">
                 <div class="blog__text">
-                    <h4>Úvod o kapele</h4>
+                    <h4>Festival je po roce zpět!</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime tempore totam aspernatur Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam, quis similique non iste et minima nisi amet est modi voluptates asperiores corrupti quia doloremque velit deserunt fuga! Harum, ut expedita. Quia reprehenderit aliquam ea nulla iste nostrum harum aut expedita! Et unde nihil ea, voluptates dolorem nisi recusandae molestias, eligendi quidem dolores nostrum, quis blanditiis! Officia cumque excepturi necessitatibus impedit debitis, quam a rem! Consectetur nam sequi sapiente placeat, aliquid ex dolore incidunt, tempore aspernatur quas ullam aliquam soluta assumenda id reprehenderit necessitatibus magnam modi corporis deserunt! Nihil, architecto, omnis explicabo id alias facere molestiae enim, perspiciatis eligendi hic ab! ipsum voluptas quaerat nam sunt quibusdam aliquid at eligendi iure, nemo quidem laboriosam excepturi veritatis cum officia possimus illo numquam ea debitis deserunt atque. Veritatis dolor commodi fuga!</p>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et incidunt tempore accusamus vel minima doloremque voluptatibus libero praesentium asperiores ut.</p>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos mollitia, dolores, eligendi quibusdam quisquam aspernatur nisi expedita omnis non quod iusto beatae? Ab commodi incidunt totam maxime ad ea accusamus?</p>
-                    <h4>Působení</h4>
+                    <h4>Další podnadpis</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime tempore totam aspernatur Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam, quis similique non iste et minima nisi amet est modi voluptates asperiores corrupti quia doloremque velit deserunt fuga! Harum, ut expedita. Quia reprehenderit aliquam ea nulla iste nostrum harum aut expedita! Et unde nihil ea, voluptates dolorem nisi recusandae molestias, eligendi quidem dolores nostrum, quis blanditiis! Officia cumque excepturi necessitatibus impedit debitis, quam a rem! Consectetur nam sequi sapiente placeat, aliquid ex dolore incidunt, tempore aspernatur quas ullam aliquam soluta assumenda id reprehenderit necessitatibus magnam modi corporis deserunt! Nihil, architecto, omnis explicabo id alias facere molestiae enim, perspiciatis eligendi hic ab! ipsum voluptas quaerat nam sunt quibusdam aliquid at eligendi iure, nemo quidem laboriosam excepturi veritatis cum officia possimus illo numquam ea debitis deserunt atque. Veritatis dolor commodi fuga!</p>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et incidunt tempore accusamus vel minima doloremque voluptatibus libero praesentium asperiores ut.</p>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos mollitia, dolores, eligendi quibusdam quisquam aspernatur nisi expedita omnis non quod iusto beatae? Ab commodi incidunt totam maxime ad ea accusamus?</p>
-                    <div class="blog__audio-section">
-                        <h4>Ukázka z tvorby:</h4>
-                        {% include "@components/box/audio/audio.twig" with { props: { 
-                            src: "https://audio.jukehost.co.uk/9enxXQaZQ4OAmD1FSxbyh4o17WdoNYX4",
-                            name: "Název písničky"
-                        }}%}                      
-                    </div>
-                    {# <div class="blog__audio-section u-pt-20">
-                        <h4>Ukázka z tvorby v2:</h4>
-                        <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1452190555&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/h-ctor-guitarrista" title="Héctor Guitarrista 8" target="_blank" style="color: #cccccc; text-decoration: none;"></a><a href="https://soundcloud.com/h-ctor-guitarrista/over-my-head" title="Over My Head - Sum 41 | Cover by Héctor Oliva" target="_blank" style="color: #cccccc; text-decoration: none;"></a></div>
-                    </div> #}
-                    <h4>Video ukázka:</h4>
-                    <div class="blog__video-section">
-                        {% include "@components/box/video/video.twig" with { props: { 
-                            link: "https://www.youtube.com/embed/_4C7Zr0qL8s" 
-                        }}%}
-                    </div>
                 </div>
                 <div class="blog__social">
                     <span>Sociální sítě:</span>
